crates/ferrobridge-hl7v2/tests/it/snapshots/it__supplement__mdm_t02_sample_bundle.snap
---
source: crates/ferrobridge-hl7v2/tests/it/supplement.rs
expression: pretty(mapped.bundle())
---
{
  "entry": [
    {
      "fullUrl": "urn:uuid:9cb10cce-6600-8b54-8a07-b38d613f05be",
      "resource": {
        "destination": [
          {
            "_endpoint": {
              "extension": [
                {
                  "url": "http://hl7.org/fhir/R4/extension-data-absent-reason.html",
                  "valueCode": "unknown"
                }
              ]
            }
          }
        ],
        "eventCoding": {
          "code": "T02",
          "display": "MDM^T02^MDM_T02",
          "system": "http://terminology.hl7.org/CodeSystem/v2-0003"
        },
        "meta": {
          "tag": [
            {
              "system": "http://terminology.hl7.org/CodeSystem/v2-0103"
            }
          ]
        },
        "resourceType": "MessageHeader",
        "sender": {
          "reference": "urn:uuid:8e1a230c-93cd-85e0-a55f-89e469e28cd2"
        },
        "source": {
          "endpoint": "urn:ferrobridge:hl7v2-hd:HIE",
          "name": "HIE"
        }
      }
    },
    {
      "fullUrl": "urn:uuid:8e1a230c-93cd-85e0-a55f-89e469e28cd2",
      "resource": {
        "identifier": [
          {
            "value": "REDDING HOSPITAL"
          }
        ],
        "resourceType": "Organization"
      }
    },
    {
      "fullUrl": "urn:uuid:781fb15f-8ed0-8fa0-9125-a8a735fe1b50",
      "resource": {
        "address": [
          {
            "city": "BOULDER",
            "country": "US",
            "postalCode": "12345-2144",
            "state": "CO"
          }
        ],
        "birthDate": "1994-12-01",
        "gender": "male",
        "identifier": [
          {
            "type": {
              "coding": [
                {
                  "code": "MR"
                }
              ]
            },
            "value": "000322330"
          }
        ],
        "name": [
          {
            "family": "JOHN",
            "given": [
              "DOE",
              "TEST"
            ],
            "suffix": [
              "JR."
            ]
          }
        ],
        "resourceType": "Patient",
        "telecom": [
          {
            "extension": [
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-area",
                "valueString": "103"
              },
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-local",
                "valueString": "1443441"
              }
            ],
            "value": "103 1443441"
          }
        ]
      }
    },
    {
      "fullUrl": "urn:uuid:993f1f80-60bb-8cfc-a1c5-6bdcf327c4d5",
      "resource": {
        "class": {
          "code": "IMP",
          "display": "inpatient encounter",
          "system": "http://terminology.hl7.org/CodeSystem/v3-ActCode"
        },
        "identifier": [
          {
            "type": {
              "coding": [
                {
                  "code": "VN",
                  "system": "http://terminology.hl7.org/CodeSystem/v2-0203"
                }
              ],
              "text": "visit number"
            },
            "value": "1234567891"
          }
        ],
        "location": [
          {
            "location": {
              "reference": "urn:uuid:797d83df-3dcc-85b7-97ed-6d281e5d479b"
            },
            "status": "active"
          }
        ],
        "participant": [
          {
            "individual": {
              "reference": "urn:uuid:cb982708-05d4-8522-8851-3e19bde295b4"
            },
            "type": [
              {
                "coding": [
                  {
                    "code": "ATND",
                    "display": "attender",
                    "system": "http://terminology.hl7.org/CodeSystem/v3-ParticipationType"
                  }
                ]
              }
            ]
          }
        ],
        "resourceType": "Encounter",
        "status": "in-progress"
      }
    },
    {
      "fullUrl": "urn:uuid:797d83df-3dcc-85b7-97ed-6d281e5d479b",
      "resource": {
        "description": "HILLS 1 North Oncolog",
        "identifier": [
          {
            "value": "F151-01"
          }
        ],
        "mode": "instance",
        "partOf": {
          "reference": "urn:uuid:9c37d2b3-a452-895c-a820-95ad37513f69"
        },
        "physicalType": {
          "coding": [
            {
              "code": "bd",
              "system": "http://terminology.hl7.org/CodeSystem/location-physical-type"
            }
          ]
        },
        "resourceType": "Location"
      }
    },
    {
      "fullUrl": "urn:uuid:58a8bef4-7d08-8334-aa50-77fb1f0e5fc7",
      "resource": {
        "identifier": [
          {
            "value": "F1N"
          }
        ],
        "mode": "instance",
        "partOf": {
          "reference": "urn:uuid:b4761bdb-15a4-8442-ac54-0240553f2e77"
        },
        "physicalType": {
          "coding": [
            {
              "code": "wa",
              "system": "http://terminology.hl7.org/CodeSystem/location-physical-type"
            }
          ]
        },
        "resourceType": "Location"
      }
    },
    {
      "fullUrl": "urn:uuid:9c37d2b3-a452-895c-a820-95ad37513f69",
      "resource": {
        "identifier": [
          {
            "value": "F151"
          }
        ],
        "mode": "instance",
        "partOf": {
          "reference": "urn:uuid:58a8bef4-7d08-8334-aa50-77fb1f0e5fc7"
        },
        "physicalType": {
          "coding": [
            {
              "code": "ro",
              "system": "http://terminology.hl7.org/CodeSystem/location-physical-type"
            }
          ]
        },
        "resourceType": "Location"
      }
    },
    {
      "fullUrl": "urn:uuid:b4761bdb-15a4-8442-ac54-0240553f2e77",
      "resource": {
        "identifier": [
          {
            "value": "FTH"
          }
        ],
        "mode": "instance",
        "physicalType": {
          "coding": [
            {
              "code": "si",
              "system": "http://terminology.hl7.org/CodeSystem/location-physical-type"
            }
          ]
        },
        "resourceType": "Location"
      }
    },
    {
      "fullUrl": "urn:uuid:cb982708-05d4-8522-8851-3e19bde295b4",
      "resource": {
        "identifier": [
          {
            "value": "1123456771"
          }
        ],
        "name": [
          {
            "family": "MITCHELL",
            "given": [
              "HILA",
              "K"
            ]
          }
        ],
        "resourceType": "Practitioner"
      }
    },
    {
      "fullUrl": "urn:uuid:79efb0ae-445a-8a54-80a3-b638cac8b83f",
      "resource": {
        "identifier": [
          {
            "value": "SndFac"
          },
          {
            "type": {
              "coding": [
                {
                  "code": "ISO"
                }
              ]
            },
            "value": "1.2.3.4.5"
          }
        ],
        "resourceType": "Organization"
      }
    },
    {
      "fullUrl": "urn:uuid:6455ee49-2e99-8b6d-80c1-c9e32ca3cf64",
      "resource": {
        "practitioner": {
          "reference": "urn:uuid:8b8e9121-19e9-8556-9823-8c3f5c38a54e"
        },
        "resourceType": "PractitionerRole"
      }
    },
    {
      "fullUrl": "urn:uuid:8b8e9121-19e9-8556-9823-8c3f5c38a54e",
      "resource": {
        "identifier": [
          {
            "value": "5742200012"
          }
        ],
        "name": [
          {
            "family": "Radon",
            "given": [
              "Nicholas"
            ],
            "use": "official"
          }
        ],
        "resourceType": "Practitioner"
      }
    },
    {
      "fullUrl": "urn:uuid:0600465c-a407-85db-ad9e-6b4426c34f09",
      "resource": {
        "identifier": [
          {
            "value": "5742200012"
          }
        ],
        "name": [
          {
            "family": "Radon",
            "given": [
              "Nicholas"
            ],
            "use": "official"
          }
        ],
        "resourceType": "Practitioner"
      }
    },
    {
      "fullUrl": "urn:uuid:3217bfa5-97bf-898f-884a-a83ef9ded10a",
      "resource": {
        "identifier": [
          {
            "value": "Good Health Hospital"
          }
        ],
        "name": "L",
        "resourceType": "Organization"
      }
    },
    {
      "fullUrl": "urn:uuid:464f76f8-5cf1-8506-8a9a-aaf1799250a8",
      "resource": {
        "authenticator": {
          "reference": "urn:uuid:89a55dd8-b13a-844f-b2cc-616659867cba"
        },
        "author": [
          {
            "reference": "urn:uuid:67b78f59-3e7b-8f87-92ae-6335663e982e"
          }
        ],
        "content": [
          {
            "attachment": {
              "contentType": "TX"
            }
          },
          {
            "attachment": {
              "contentType": "PDF"
            }
          }
        ],
        "description": "Discharge Summary",
        "docStatus": "AU",
        "identifier": [
          {
            "value": "PN_Radon_20230820174913.RTF"
          }
        ],
        "masterIdentifier": {
          "assigner": {
            "reference": "urn:uuid:f8ab0313-b7d6-8774-b114-98c98f521569"
          },
          "value": "3738931392"
        },
        "resourceType": "DocumentReference",
        "status": "current",
        "type": {
          "coding": [
            {
              "code": "PN"
            }
          ]
        }
      }
    },
    {
      "fullUrl": "urn:uuid:67b78f59-3e7b-8f87-92ae-6335663e982e",
      "resource": {
        "identifier": [
          {
            "value": "5742200012"
          }
        ],
        "name": [
          {
            "family": "Radon",
            "given": [
              "Nicholas"
            ],
            "use": "official"
          }
        ],
        "resourceType": "Practitioner"
      }
    },
    {
      "fullUrl": "urn:uuid:89a55dd8-b13a-844f-b2cc-616659867cba",
      "resource": {
        "identifier": [
          {
            "value": "1123456771"
          }
        ],
        "name": [
          {
            "family": "MITCHELL",
            "given": [
              "HILA",
              "K"
            ],
            "use": "official"
          }
        ],
        "resourceType": "Practitioner"
      }
    },
    {
      "fullUrl": "urn:uuid:f8ab0313-b7d6-8774-b114-98c98f521569",
      "resource": {
        "identifier": [
          {
            "value": "REDDING HOSPITAL"
          }
        ],
        "resourceType": "Organization"
      }
    }
  ],
  "identifier": {
    "value": "10819306"
  },
  "resourceType": "Bundle",
  "type": "message"
}
