crates/ferrobridge-hl7v2/tests/it/snapshots/it__supplement__mdm_t02_sample_inventories.snap
---
source: crates/ferrobridge-hl7v2/tests/it/supplement.rs
expression: "(inventory(mapped.bundle()), inventory(&expected))"
---
(
    [
        (
            "DocumentReference",
            1,
        ),
        (
            "Encounter",
            1,
        ),
        (
            "Location",
            4,
        ),
        (
            "MessageHeader",
            1,
        ),
        (
            "Organization",
            4,
        ),
        (
            "Patient",
            1,
        ),
        (
            "Practitioner",
            5,
        ),
        (
            "PractitionerRole",
            1,
        ),
    ],
    [
        (
            "Account",
            1,
        ),
        (
            "DiagnosticReport",
            1,
        ),
        (
            "DocumentReference",
            1,
        ),
        (
            "Encounter",
            1,
        ),
        (
            "Location",
            4,
        ),
        (
            "MessageHeader",
            1,
        ),
        (
            "Observation",
            3,
        ),
        (
            "Organization",
            2,
        ),
        (
            "Patient",
            1,
        ),
        (
            "Practitioner",
            4,
        ),
        (
            "PractitionerRole",
            2,
        ),
        (
            "Provenance",
            2,
        ),
        (
            "ServiceRequest",
            1,
        ),
        (
            "Specimen",
            1,
        ),
    ],
)
