crates/ferrobridge-hl7v2/tests/it/snapshots/it__supplement__orl_o22_bundle.snap
---
source: crates/ferrobridge-hl7v2/tests/it/supplement.rs
expression: pretty(mapped.bundle())
---
{
  "entry": [
    {
      "fullUrl": "urn:uuid:be3b16a2-8e8f-8aba-b101-ca8139b25e07",
      "resource": {
        "destination": [
          {
            "endpoint": "urn:ferrobridge:hl7v2-hd:EHR",
            "name": "EHR",
            "receiver": {
              "reference": "urn:uuid:038779a8-2b21-8a3c-9c7f-595db71ada13"
            },
            "target": {
              "reference": "urn:uuid:d528f8ac-1fb8-8a39-bef6-a4765e970307"
            }
          }
        ],
        "eventCoding": {
          "code": "O22",
          "display": "ORL^O22^ORL_O22",
          "system": "http://terminology.hl7.org/CodeSystem/v2-0003"
        },
        "meta": {
          "tag": [
            {
              "system": "http://terminology.hl7.org/CodeSystem/v2-0103"
            }
          ]
        },
        "resourceType": "MessageHeader",
        "response": {
          "code": "AA",
          "identifier": "ORD00041"
        },
        "sender": {
          "reference": "urn:uuid:6bfccb12-91da-85d7-9b32-74621e6e9cb3"
        },
        "source": {
          "endpoint": "urn:ferrobridge:hl7v2-hd:LAB",
          "name": "LAB"
        }
      }
    },
    {
      "fullUrl": "urn:uuid:6bfccb12-91da-85d7-9b32-74621e6e9cb3",
      "resource": {
        "identifier": [
          {
            "value": "NORTHLAB"
          }
        ],
        "resourceType": "Organization"
      }
    },
    {
      "fullUrl": "urn:uuid:d528f8ac-1fb8-8a39-bef6-a4765e970307",
      "resource": {
        "identifier": [
          {
            "value": "EHR"
          }
        ],
        "resourceType": "Device"
      }
    },
    {
      "fullUrl": "urn:uuid:038779a8-2b21-8a3c-9c7f-595db71ada13",
      "resource": {
        "identifier": [
          {
            "value": "SOUTHCLINIC"
          }
        ],
        "resourceType": "Organization"
      }
    },
    {
      "fullUrl": "urn:uuid:38011b84-7726-81c4-af16-2c303bb37fc9",
      "resource": {
        "birthDate": "1980-01-01",
        "gender": "male",
        "identifier": [
          {
            "type": {
              "coding": [
                {
                  "code": "MR"
                }
              ]
            },
            "value": "PAT-0041"
          }
        ],
        "name": [
          {
            "family": "Doe",
            "given": [
              "Sam"
            ],
            "use": "official"
          }
        ],
        "resourceType": "Patient"
      }
    },
    {
      "fullUrl": "urn:uuid:efa8287e-d193-809f-b1b0-206d574c9c21",
      "resource": {
        "identifier": [
          {
            "type": {
              "coding": [
                {
                  "code": "PGN",
                  "system": "http://terminology.hl7.org/CodeSystem/v2-0203"
                }
              ]
            },
            "value": "SPC-41"
          }
        ],
        "resourceType": "Specimen",
        "type": {
          "coding": [
            {
              "code": "BLD",
              "display": "Whole blood",
              "system": "http://terminology.hl7.org/CodeSystem/v2-0487"
            }
          ]
        }
      }
    }
  ],
  "identifier": {
    "value": "MSG00041"
  },
  "resourceType": "Bundle",
  "timestamp": "2026-09-26T10:15:00+02:00",
  "type": "message"
}
