crates/ferrobridge-hl7v2/tests/it/snapshots/it__supplement__orl_o22_outcomes.snap
---
source: crates/ferrobridge-hl7v2/tests/it/supplement.rs
expression: summary(&mapped)
---
[
    "version-selected: VersionSelected { structure: \"ORL_O22\", version: \"2.5.1\", declared: Some(\"2.5.1\") }",
    "supplemented: Supplemented { at: Location { segment: \"MSH\", sequence: 1, field: None, repetition: None, component: None, subcomponent: None }, map: \"message-orl-o22-to-bundle\", overrides: false }",
    "unsupported-assignment: MSH[1]-10(1) segment-msh-to-bundle MSH-10 -> identifier.system [/to be determined by the implementer/]",
    "supplemented: Supplemented { at: Location { segment: \"MSH\", sequence: 1, field: None, repetition: None, component: None, subcomponent: None }, map: \"segment-msh-to-messageheader\", overrides: true }",
    "supplemented: Supplemented { at: Location { segment: \"MSH\", sequence: 1, field: Some(3), repetition: Some(1), component: None, subcomponent: None }, map: \"datatype-hd-name-to-messageheader-source\", overrides: true }",
    "unmapped-component: MSH[1]-9(1) datatype-msg-to-coding component 1",
    "unmapped-component: MSH[1]-9(1) datatype-msg-to-coding component 3",
    "unresolved-table: MSH[1]-11(1) datatype-pt-to-meta PT.1 -> tag[1].code [unspecified_mapping]",
    "narrative-condition: MSH[1] message-orl-o22-to-bundle ORL_O22.MSH -> Provenance[1] []",
    "no-segment-map: MSH[1] Provenance [\"segment-msh-operator-to-provenance\", \"segment-msh-source-to-provenance\", \"segment-msh-transformation-to-provenance\"]",
    "unmapped-field: MSH[1]-12",
    "group-path: GroupPath { at: Location { segment: \"PID\", sequence: 1, field: None, repetition: None, component: None, subcomponent: None }, row_path: \"ORL_O22.RESPONSE.PID\", tree_path: \"ORL_O22.RESPONSE.PATIENT.PID\" }",
    "narrative-condition: PID[1]-3(1) datatype-cx-to-identifier CX.4 -> assigner(Organization) []",
    "unsupported-condition: PID[1]-3(1) datatype-cx-to-identifier CX.4 -> system [IF CX.4 IN http://hl7.org/implement/standards/fhir/identifier-registry.html]",
    "narrative-condition: PID[1] message-orl-o22-to-bundle ORL_O22.RESPONSE.PID -> Provenance[4] []",
    "unmapped-field: PID[1]-1",
    "group-path: GroupPath { at: Location { segment: \"ORC\", sequence: 1, field: None, repetition: None, component: None, subcomponent: None }, row_path: \"ORL_O22.RESPONSE.ORDER.ORC\", tree_path: \"ORL_O22.RESPONSE.PATIENT.ORDER.ORC\" }",
    "group-path: GroupPath { at: Location { segment: \"OBR\", sequence: 1, field: None, repetition: None, component: None, subcomponent: None }, row_path: \"ORL_O22.RESPONSE.ORDER.OBSERVATION_REQUEST.OBR\", tree_path: \"ORL_O22.RESPONSE.PATIENT.ORDER.OBSERVATION_REQUEST.OBR\" }",
    "supplemented: Supplemented { at: Location { segment: \"OBR\", sequence: 1, field: Some(4), repetition: Some(1), component: None, subcomponent: None }, map: \"datatype-cwe-to-codeableconcept\", overrides: true }",
    "unsupported-target: OBR[1] message-orl-o22-to-bundle ORL_O22.RESPONSE.ORDER.OBSERVATION_REQUEST.OBR -> Specimen[each] [a label spreads one value over several instances]",
    "unmapped-field: OBR[1]-1",
    "group-path: GroupPath { at: Location { segment: \"SPM\", sequence: 1, field: None, repetition: None, component: None, subcomponent: None }, row_path: \"ORL_O22.RESPONSE.ORDER.OBSERVATION_REQUEST.SPECIMEN.SPM\", tree_path: \"ORL_O22.RESPONSE.PATIENT.ORDER.OBSERVATION_REQUEST.SPECIMEN.SPM\" }",
    "datatype-half: DatatypeHalf { at: Location { segment: \"SPM\", sequence: 1, field: Some(2), repetition: Some(1), component: None, subcomponent: None }, row: RowRef { map: \"segment-spm-to-specimen\", source: \"SPM-2\", target: \"identifier[1]\" }, map: \"datatype-eip-placerassignedidentifier-to-identifier\", halves: [\"datatype-eip-placerassignedidentifier-to-identifier\", \"datatype-eip-fillerassignedidentifier-to-identifier\"] }",
    "datatype-half: DatatypeHalf { at: Location { segment: \"SPM\", sequence: 1, field: Some(2), repetition: Some(1), component: None, subcomponent: None }, row: RowRef { map: \"segment-spm-to-specimen\", source: \"SPM-2\", target: \"identifier[2]\" }, map: \"datatype-eip-fillerassignedidentifier-to-identifier\", halves: [\"datatype-eip-placerassignedidentifier-to-identifier\", \"datatype-eip-fillerassignedidentifier-to-identifier\"] }",
    "unmapped-field: SPM[1]-1",
    "superseded: OBR[1] segment-obr-to-servicerequest OBR -> intent []",
    "missing-required: ServiceRequest.extension[1] lacks Extension.url",
    "missing-required: ServiceRequest lacks ServiceRequest.subject",
    "missing-required: Provenance lacks Provenance.target",
]
