crates/ferrobridge-hl7v2/tests/it/snapshots/it__supplement__oul_r22_bundle.snap
---
source: crates/ferrobridge-hl7v2/tests/it/supplement.rs
expression: pretty(mapped.bundle())
---
{
  "entry": [
    {
      "fullUrl": "urn:uuid:608ce03b-9d89-8d09-9cb2-0826c8e20f05",
      "resource": {
        "destination": [
          {
            "endpoint": "urn:ferrobridge:hl7v2-hd:EHR",
            "name": "EHR",
            "receiver": {
              "reference": "urn:uuid:489f1b3a-2829-8e0b-9b8d-f662a27213af"
            },
            "target": {
              "reference": "urn:uuid:adb9208b-9953-8b21-8bf7-48fdc209fb79"
            }
          }
        ],
        "eventCoding": {
          "code": "R22",
          "display": "OUL^R22^OUL_R22",
          "system": "http://terminology.hl7.org/CodeSystem/v2-0003"
        },
        "meta": {
          "tag": [
            {
              "system": "http://terminology.hl7.org/CodeSystem/v2-0103"
            }
          ]
        },
        "resourceType": "MessageHeader",
        "sender": {
          "reference": "urn:uuid:c6f5c273-370d-8a33-a7b9-f06a34281f45"
        },
        "source": {
          "endpoint": "urn:ferrobridge:hl7v2-hd:LAB",
          "name": "LAB"
        }
      }
    },
    {
      "fullUrl": "urn:uuid:c6f5c273-370d-8a33-a7b9-f06a34281f45",
      "resource": {
        "identifier": [
          {
            "value": "NORTHLAB"
          }
        ],
        "resourceType": "Organization"
      }
    },
    {
      "fullUrl": "urn:uuid:adb9208b-9953-8b21-8bf7-48fdc209fb79",
      "resource": {
        "identifier": [
          {
            "value": "EHR"
          }
        ],
        "resourceType": "Device"
      }
    },
    {
      "fullUrl": "urn:uuid:489f1b3a-2829-8e0b-9b8d-f662a27213af",
      "resource": {
        "identifier": [
          {
            "value": "SOUTHCLINIC"
          }
        ],
        "resourceType": "Organization"
      }
    },
    {
      "fullUrl": "urn:uuid:4016de6a-c1c6-84fd-9ad3-cd8621849e59",
      "resource": {
        "birthDate": "1980-01-01",
        "gender": "male",
        "identifier": [
          {
            "type": {
              "coding": [
                {
                  "code": "MR"
                }
              ]
            },
            "value": "PAT-0042"
          }
        ],
        "name": [
          {
            "family": "Doe",
            "given": [
              "Sam"
            ],
            "use": "official"
          }
        ],
        "resourceType": "Patient"
      }
    },
    {
      "fullUrl": "urn:uuid:c38ff9f5-a70b-8431-beb7-2eb66954ddf2",
      "resource": {
        "identifier": [
          {
            "type": {
              "coding": [
                {
                  "code": "PGN",
                  "system": "http://terminology.hl7.org/CodeSystem/v2-0203"
                }
              ]
            },
            "value": "SPC-42"
          }
        ],
        "resourceType": "Specimen",
        "type": {
          "coding": [
            {
              "code": "BLD",
              "display": "Whole blood",
              "system": "http://terminology.hl7.org/CodeSystem/v2-0487"
            }
          ]
        }
      }
    },
    {
      "fullUrl": "urn:uuid:f762d1a5-266c-83b4-bed2-7b555cd55d97",
      "resource": {
        "code": {
          "coding": [
            {
              "code": "2345-7",
              "display": "Glucose",
              "system": "LN"
            }
          ]
        },
        "effectiveDateTime": "2026-09-26T08:00:00+02:00",
        "resourceType": "DiagnosticReport",
        "status": "final"
      }
    },
    {
      "fullUrl": "urn:uuid:c2f0d527-5343-84ac-9bd1-b82f0cfe5328",
      "resource": {
        "code": {
          "coding": [
            {
              "code": "2345-7",
              "display": "Glucose",
              "system": "LN"
            }
          ]
        },
        "effectiveDateTime": "2026-09-26T09:00:00+02:00",
        "interpretation": [
          {
            "coding": [
              {
                "code": "N",
                "display": "Normal",
                "system": "http://terminology.hl7.org/CodeSystem/v3-ObservationInterpretation"
              }
            ]
          }
        ],
        "referenceRange": [
          {
            "text": "3.9-5.8"
          }
        ],
        "resourceType": "Observation",
        "status": "final",
        "valueQuantity": {
          "code": "mmol/L",
          "system": "UCUM",
          "unit": "mmol/L",
          "value": 5.4
        }
      }
    }
  ],
  "identifier": {
    "value": "MSG00042"
  },
  "resourceType": "Bundle",
  "timestamp": "2026-09-26T10:15:00+02:00",
  "type": "message"
}
