crates/ferrobridge-hl7v2/tests/it/snapshots/it__supplement__oul_r22_outcomes.snap
---
source: crates/ferrobridge-hl7v2/tests/it/supplement.rs
expression: summary(&mapped)
---
[
    "earlier-version: EarlierVersion { declared: \"2.5.1\" }",
    "supplemented: Supplemented { at: Location { segment: \"MSH\", sequence: 1, field: None, repetition: None, component: None, subcomponent: None }, map: \"message-oul-r22-to-bundle\", overrides: false }",
    "unsupported-assignment: MSH[1]-10(1) segment-msh-to-bundle MSH-10 -> identifier.system [/to be determined by the implementer/]",
    "supplemented: Supplemented { at: Location { segment: \"MSH\", sequence: 1, field: None, repetition: None, component: None, subcomponent: None }, map: \"segment-msh-to-messageheader\", overrides: true }",
    "supplemented: Supplemented { at: Location { segment: \"MSH\", sequence: 1, field: Some(3), repetition: Some(1), component: None, subcomponent: None }, map: \"datatype-hd-name-to-messageheader-source\", overrides: true }",
    "unmapped-component: MSH[1]-9(1) datatype-msg-to-coding component 1",
    "unmapped-component: MSH[1]-9(1) datatype-msg-to-coding component 3",
    "unresolved-table: MSH[1]-11(1) datatype-pt-to-meta PT.1 -> tag[1].code [unspecified_mapping]",
    "narrative-condition: MSH[1] message-oul-r22-to-bundle OUL_R22.MSH -> Provenance[1] []",
    "no-segment-map: MSH[1] Provenance [\"segment-msh-operator-to-provenance\", \"segment-msh-source-to-provenance\", \"segment-msh-transformation-to-provenance\"]",
    "unmapped-field: MSH[1]-12",
    "narrative-condition: PID[1]-3(1) datatype-cx-to-identifier CX.4 -> assigner(Organization) []",
    "unsupported-condition: PID[1]-3(1) datatype-cx-to-identifier CX.4 -> system [IF CX.4 IN http://hl7.org/implement/standards/fhir/identifier-registry.html]",
    "narrative-condition: PID[1] message-oul-r22-to-bundle OUL_R22.PATIENT.PID -> Provenance[4] []",
    "unmapped-field: PID[1]-1",
    "datatype-half: DatatypeHalf { at: Location { segment: \"SPM\", sequence: 1, field: Some(2), repetition: Some(1), component: None, subcomponent: None }, row: RowRef { map: \"segment-spm-to-specimen\", source: \"SPM-2\", target: \"identifier[1]\" }, map: \"datatype-eip-placerassignedidentifier-to-identifier\", halves: [\"datatype-eip-placerassignedidentifier-to-identifier\", \"datatype-eip-fillerassignedidentifier-to-identifier\"] }",
    "datatype-half: DatatypeHalf { at: Location { segment: \"SPM\", sequence: 1, field: Some(2), repetition: Some(1), component: None, subcomponent: None }, row: RowRef { map: \"segment-spm-to-specimen\", source: \"SPM-2\", target: \"identifier[2]\" }, map: \"datatype-eip-fillerassignedidentifier-to-identifier\", halves: [\"datatype-eip-placerassignedidentifier-to-identifier\", \"datatype-eip-fillerassignedidentifier-to-identifier\"] }",
    "unmapped-field: SPM[1]-1",
    "narrative-condition: OBR[1]-2 segment-obr-to-diagnosticreport OBR-2 -> identifier[1] []",
    "narrative-condition: OBR[1]-2 segment-obr-to-diagnosticreport OBR-2 -> identifier[1].type.coding.code []",
    "narrative-condition: OBR[1]-2 segment-obr-to-diagnosticreport OBR-2 -> identifier[1].type.coding.system []",
    "narrative-condition: OBR[1]-3 segment-obr-to-diagnosticreport OBR-3 -> identifier[2] []",
    "narrative-condition: OBR[1]-3 segment-obr-to-diagnosticreport OBR-3 -> identifier[2].type.coding.code []",
    "narrative-condition: OBR[1]-3 segment-obr-to-diagnosticreport OBR-3 -> identifier[2].type.coding.system []",
    "supplemented: Supplemented { at: Location { segment: \"OBR\", sequence: 1, field: Some(4), repetition: Some(1), component: None, subcomponent: None }, map: \"datatype-cwe-to-codeableconcept\", overrides: true }",
    "narrative-condition: OBR[1] message-oul-r22-to-bundle OUL_R22.SPECIMEN.ORDER.OBR -> ServiceRequest[1] []",
    "unmapped-field: OBR[1]-1",
    "narrative-condition: OBX[1]-5 segment-obx-to-observation OBX-5 -> valueString []",
    "unsupported-condition: OBX[1]-5 segment-obx-to-observation OBX-5 -> valueString [IF (OBX-2 EQUALS \"SN\"  AND OBX-5.1  EQUALS \"<>\"]",
    "narrative-condition: OBX[1]-5 segment-obx-to-observation OBX-5 -> valueString []",
    "supplemented: Supplemented { at: Location { segment: \"OBX\", sequence: 1, field: Some(6), repetition: Some(1), component: None, subcomponent: None }, map: \"datatype-cwe-to-quantity\", overrides: true }",
    "unmapped-field: OBX[1]-1",
    "unmapped-field: OBX[1]-2",
]
